--- a/src/main/resources/fxml/FXMLAirlineStaffBookView.fxml
+++ b/src/main/resources/fxml/FXMLAirlineStaffBookView.fxml
@@ -24,17 +24,17 @@
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                     </columnResizePolicy>
                 </TableView>
-                <Button fx:id="addflightbtn" layoutX="619.0" layoutY="70.0" mnemonicParsing="false" opacity="0.8" prefHeight="44.0" prefWidth="331.0" style="-fx-font-size: 15px; -fx-font-family: NanumSquare Bold; -fx-background-color: rgba(0, 000, 000, 0.8);" text="예약 삭제" textAlignment="CENTER" textFill="WHITE">
+                <Button fx:id="delete_book_btn" layoutX="619.0" layoutY="70.0"  mnemonicParsing="false" opacity="0.8" prefHeight="44.0" prefWidth="331.0" style="-fx-font-size: 15px; -fx-font-family: NanumSquare Bold; -fx-background-color: rgba(0, 000, 000, 0.8);" text="예약 삭제" textAlignment="CENTER" textFill="WHITE">
                 </Button>
                 <AnchorPane fx:id="flightInformation" layoutX="182.0" layoutY="128.0" opacity="0.8" prefHeight="401.0" prefWidth="768.0" style="-fx-background-color: rgba(0, 000, 000, 0.8);">
                     <children>
-                        <Label fx:id="identifier" layoutX="14.0" layoutY="7.0" prefHeight="52.0" prefWidth="206.0" style="-fx-font-size: 40px; -fx-font-family: NanumSquare Bold;" text="RD202" textFill="WHITE">
+                        <Label fx:id="identifier" layoutX="14.0" layoutY="7.0" prefHeight="52.0" prefWidth="206.0" style="-fx-font-size: 40px; -fx-font-family: NanumSquare Bold;" text="항공편" textFill="WHITE">
    
                         </Label>
-                        <Label fx:id="start_date" layoutX="138.0" layoutY="67.0" prefHeight="29.0" prefWidth="158.0" style="-fx-font-size: 15px; -fx-font-family: NanumSquare Bold;" text="08:00:00" textFill="WHITE">
+                        <Label fx:id="start_date" layoutX="138.0" layoutY="67.0" prefHeight="29.0" prefWidth="158.0" style="-fx-font-size: 15px; -fx-font-family: NanumSquare Bold;" text="00:00:00" textFill="WHITE">
 
                         </Label>
-                        <Label fx:id="end_date" layoutX="138.0" layoutY="91.0" prefHeight="29.0" prefWidth="158.0" style="-fx-font-size: 15px; -fx-font-family: NanumSquare Bold;" text="09:00:00" textFill="WHITE">
+                        <Label fx:id="end_date" layoutX="138.0" layoutY="91.0" prefHeight="29.0" prefWidth="158.0" style="-fx-font-size: 15px; -fx-font-family: NanumSquare Bold;" text="00:00:00" textFill="WHITE">
 
                         </Label>
                         <Label layoutX="14.0" layoutY="66.0" prefHeight="29.0" prefWidth="72.0" style="-fx-font-size: 15px; -fx-font-family: NanumSquare Bold;" text="출발 시각" textFill="WHITE">
@@ -43,7 +43,7 @@
                         <Label layoutX="14.0" layoutY="93.0" prefHeight="29.0" prefWidth="72.0" style="-fx-font-size: 15px; -fx-font-family: NanumSquare Bold;" text="도착 시각" textFill="WHITE">
 
                         </Label>
-                        <Label fx:id="start_airport" layoutX="210.0" layoutY="15.0" prefHeight="37.0" prefWidth="113.0" style="-fx-font-size: 20px; -fx-font-family: NanumSquare Bold; -fx-alignment: center;" text="김해공항" textAlignment="CENTER" textFill="WHITE">
+                        <Label fx:id="start_airport" layoutX="210.0" layoutY="15.0" prefHeight="37.0" prefWidth="113.0" style="-fx-font-size: 20px; -fx-font-family: NanumSquare Bold; -fx-alignment: center;" text="출발지" textAlignment="CENTER" textFill="WHITE">
 
                         </Label>
                         <Label fx:id="via" layoutY="348.0" prefHeight="29.0" prefWidth="331.0" style="-fx-font-size: 15px; -fx-font-family: NanumSquare Bold; -fx-alignment: center;" text="본 항공편은 목적지를 경유합니다" textFill="WHITE" visible="false">
@@ -67,7 +67,7 @@
                         <Label fx:id="business_seat_num" layoutX="570.0" layoutY="49.0" prefHeight="38.0" prefWidth="59.0" style="-fx-font-size: 30px; -fx-font-family: NanumSquare Bold; -fx-alignment: center;" text="0" textFill="WHITE">
 
                         </Label>
-                        <Label fx:id="dest_airport" layoutX="339.0" layoutY="15.0" prefHeight="37.0" prefWidth="113.0" style="-fx-font-size: 20px; -fx-font-family: NanumSquare Bold; -fx-alignment: center;" text="인천공항" textFill="WHITE" />
+                        <Label fx:id="dest_airport" layoutX="339.0" layoutY="15.0" prefHeight="37.0" prefWidth="113.0" style="-fx-font-size: 20px; -fx-font-family: NanumSquare Bold; -fx-alignment: center;" text="도착지" textFill="WHITE" />
                         <Label layoutX="314.0" layoutY="15.0" prefHeight="37.0" prefWidth="32.0" style="-fx-font-size: 20px; -fx-font-family: NanumSquare Bold; -fx-alignment: center;" text="-" textAlignment="CENTER" textFill="WHITE" />
                         <TableView fx:id="bookTable" layoutX="1.0" layoutY="128.0" opacity="0.8" prefHeight="273.0" prefWidth="768.0" style=" -fx-background-color: rgba(0, 000, 000, 0.8); " stylesheets="@../styles/table.css">
                             <columns>
