--- a/src/main/resources/fxml/FXMLCustomerMainView.fxml
+++ b/src/main/resources/fxml/FXMLCustomerMainView.fxml
@@ -24,7 +24,7 @@
                   <Insets left="23.0" top="17.0" />
                </HBox.margin>
                <image>
-                  <Image url="@assets/logo.png" />
+                  <Image url="/assets/logo.png" />
                </image>
             </ImageView>
             <VBox prefHeight="200.0" prefWidth="170.0">
